Fix styles to work on firefox and IE11

--- a/client/knowledge_base_search/src/containers/ViewAllContainer/styles.css
+++ b/client/knowledge_base_search/src/containers/ViewAllContainer/styles.css
@@ -19,6 +19,7 @@
 
 .view_all_questions_description--h5 {
   padding: 0.3rem 0 1rem 0;
+  flex-shrink: 0;
   font-size: 0.9rem;
   color: #5a5a5a;
 }
@@ -56,12 +57,15 @@
   padding: 0;
 }
 
-.close_view_all--button svg{
-  color: #959595;
-  fill: currentColor;
+.close_view_all--button {
   position: absolute;
   top: 1rem;
   right: 1rem;
+}
+
+.close_view_all--button svg{
+  color: #959595;
+  fill: currentColor;
 }
 
 .close_view_all--button:hover svg,
